[package]
name = "sensor_lab_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
log = "0.4.17"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"


